--- a/directive/tx-payment.html
+++ b/directive/tx-payment.html
@@ -1,4 +1,4 @@
-<div class="row" ng-class="{sent:tx.transaction.type == 'sent', received:tx.transaction.type == 'received'}">
+<div class="row" ng-class="{sent:tx.transaction.type == 'sent', received:tx.transaction.type == 'received', exchange:tx.transaction.type == 'convert'}">
 	<div class="col-xs-3">
 		{{tx.transaction.date | date:'yyyy-MM-dd HH:mm:ss'}}
 	</div>
@@ -13,6 +13,12 @@
 				<span ng-show="tx.transaction.type == 'received'">
 					<strong>{{tx.transaction.source}}</strong>
 					{{'sent_you' | translate}}
+					<strong>{{tx.transaction.delivered.value | fmtnum}} {{tx.transaction.delivered.currency | rpcurrency:native.code}}</strong>
+				</span>
+				<span ng-show="tx.transaction.type == 'convert'">
+					{{ 'you_convert' | translate }}
+					<strong>{{tx.transaction.spent.value | fmtnum}} {{tx.transaction.spent.currency | rpcurrency:native.code}}</strong>
+					{{ 'you_convert_to' | translate }}
 					<strong>{{tx.transaction.delivered.value | fmtnum}} {{tx.transaction.delivered.currency | rpcurrency:native.code}}</strong>
 				</span>
 				<span ng-show="tx.transaction.tag">{{'tx_tag' | translate}} <strong>{{tx.transaction.tag}}</strong>)</span>
