--- a/pages/history.html
+++ b/pages/history.html
@@ -17,7 +17,7 @@
 					<tx-payment ng-switch-when="payment"></tx-payment>
 					<tx-trust ng-switch-when="trustline"></tx-trust>
 					<tx-offer ng-switch-when="order"></tx-offer>
-					<tx-offercancel ng-switch-when="offercancel"></tx-offercancel>
+					<tx-offercancel ng-switch-when="orderCancellation"></tx-offercancel>
 					<tx-message ng-switch-when="accountset"></tx-message>
 					<tx-message ng-switch-when="rippling"></tx-message>
 					<tx-message ng-switch-when="failed"></tx-message>
