--- a/directive/effects.html
+++ b/directive/effects.html
@@ -74,6 +74,22 @@
 				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
 			</span>
 
+			<span ng-switch-when="offer_cancel_buy">
+				{{ 'you_cancel_buy' | translate }}
+				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
+				{{ 'you_buy_for' | translate }}
+				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
+				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+			</span>
+			<span ng-switch-when="offer_cancel_sell">
+				{{ 'you_cancel_sell' | translate }}
+				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
+				{{ 'you_sell_for' | translate }}
+				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
+				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+			</span>
+
+
 			<!-- ngSwitchWhen: trust_create_local -->
 			<span ng-switch-when="trust_create_local">
 				You now trust {{effect.counterparty}} for {{effect.limit | fmtnum}} {{effect.limit | rpcurrency:native.code}}
