--- a/directive/effects.html
+++ b/directive/effects.html
@@ -34,31 +34,7 @@
 				<span ng-show="effect.cancelled" translate="rest_cancel"></span>
 				<span ng-hide="effect.deleted">{{'order_has' | translate}} {{effect.remaining | fmtnum}} {{effect.remaining | rpcurrency:native.code}} {{'remaining' | translate}}</span>
 			</span>
-			<!-- ngSwitchWhen: offer_cancelled -->
-      		<span ng-switch-when="offer_cancelled">
-				{{ 'order_cancel' | translate }}
-				<strong>{{effect.pays | fmtnum}} {{effect.pays | rpcurrency:native.code}}</strong>
-				{{ 'order_cancel_for' | translate }}
-				<strong>{{effect.gets | fmtnum}} {{effect.gets | rpcurrency:native.code}}</strong> 
-				{{ 'order_cancel_due' | translate }}
-			</span>
-			<!-- ngSwitchWhen: offer_created -->
-			<span ng-switch-when="created">
-				<span ng-show="effect.sell">
-					You created an order to sell
-					<strong>{{effect.gets | fmtnum}} {{effect.gets | rpcurrency:native.code}}</strong> 
-					for
-					<strong>{{effect.pays | fmtnum}} {{effect.pays | rpcurrency:native.code}}</strong>
-				</span>
-				<span ng-hide="effect.sell">
-					You created an order to buy
-					<strong>{{effect.pays | fmtnum}} {{effect.pays | rpcurrency:native.code}}</strong> 
-					for
-					<strong>{{effect.gets | fmtnum}} {{effect.gets | rpcurrency:native.code}}</strong>
-				</span>
-				({{ 'price' | translate }} <strong>{{effect.price | fmtnum:{precision: 4} }}</strong>)
-			</span>
-			<!-- ngSwitchWhen: offer_bought -->
+			
 			<span ng-switch-when="offer_bought">
 				{{ 'you_bought' | translate }}
 				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
@@ -83,6 +59,21 @@
 			</span>
 			<span ng-switch-when="offer_cancel_sell">
 				{{ 'you_cancel_sell' | translate }}
+				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
+				{{ 'you_sell_for' | translate }}
+				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
+				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+			</span>
+
+			<span ng-switch-when="offer_create_buy">
+				{{ 'you_buy' | translate }}
+				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
+				{{ 'you_buy_for' | translate }}
+				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
+				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+			</span>
+			<span ng-switch-when="offer_create_sell">
+				{{ 'you_sell' | translate }}
 				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
 				{{ 'you_sell_for' | translate }}
 				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
