--- a/directive/tx-offer.html
+++ b/directive/tx-offer.html
@@ -1,4 +1,4 @@
-<div class="row offernew">
+<div class="row" ng-class="{offernew:tx.transaction.type}">
 	<div class="col-xs-3">
 		{{tx.transaction.date | date:'yyyy-MM-dd HH:mm:ss'}}
 	</div>
