--- a/directive/effects.html
+++ b/directive/effects.html
@@ -1,46 +1,12 @@
 <ul ng-show="tx.effects" class="effects">
 		<li ng-repeat="effect in tx.effects" ng-switch="effect.type">
-			<!-- ngSwitchWhen: offer_funded -->
-			<span ng-switch-when="offer_funded">
-				<span ng-show="effect.sell">
-					{{ 'you_sold' | translate }}
-					<strong>{{effect.gets | fmtnum}} {{effect.gets | rpcurrency:native.code}}</strong> 
-					{{ 'you_sold_for' | translate }} 
-					<strong>{{effect.pays | fmtnum}} {{effect.pays | rpcurrency:native.code}}</strong>
-				</span>
-				<span ng-hide="effect.sell">
-					{{ 'you_bought' | translate }} 
-					<strong>{{effect.pays | fmtnum}} {{effect.pays | rpcurrency:native.code}}</strong> 
-					{{ 'you_bought_for' | translate }} 
-					<strong>{{effect.gets | fmtnum}} {{effect.gets | rpcurrency:native.code}}</strong>
-				</span>
-				({{ 'price' | translate }} <strong>{{effect.price | fmtnum:{precision: 4} }}</strong>){{ 'order_filled' | translate}}
-			</span>
-			<!-- ngSwitchWhen: offer_partially_funded -->
-			<span ng-switch-when="offer_partially_funded">
-				<span ng-show="effect.sell">
-					{{ 'you_sold' | translate }}
-					<strong>{{effect.got | fmtnum}} {{effect.got | rpcurrency:native.code}}</strong> 
-					{{ 'you_sold_for' | translate }} 
-					<strong>{{effect.paid | fmtnum}} {{effect.paid | rpcurrency:native.code}}</strong>
-				</span>
-				<span ng-hide="effect.sell">
-					{{ 'you_bought' | translate }}
-					<strong>{{effect.paid | fmtnum}} {{effect.paid | rpcurrency:native.code}}</strong> 
-					{{ 'you_bought_for' | translate }} 
-					<strong>{{effect.got | fmtnum}} {{effect.got | rpcurrency:native.code}}</strong>
-				</span>
-				({{ 'price' | translate }} <strong>{{effect.price | fmtnum:{precision: 4} }}</strong>)
-				<span ng-show="effect.cancelled" translate="rest_cancel"></span>
-				<span ng-hide="effect.deleted">{{'order_has' | translate}} {{effect.remaining | fmtnum}} {{effect.remaining | rpcurrency:native.code}} {{'remaining' | translate}}</span>
-			</span>
-			
 			<span ng-switch-when="offer_bought">
 				{{ 'you_bought' | translate }}
 				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
 				{{ 'you_bought_for' | translate }}
 				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
 				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+				<span ng-show="effect.filled">{{ 'order_filled' | translate}}</span>
 			</span>
 			<span ng-switch-when="offer_sold">
 				{{ 'you_sold' | translate }}
@@ -48,21 +14,26 @@
 				{{ 'you_sold_for' | translate }}
 				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
 				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+				<span ng-show="effect.filled">{{ 'order_filled' | translate}}</span>
 			</span>
 
 			<span ng-switch-when="offer_cancel_buy">
-				{{ 'you_cancel_buy' | translate }}
+				<span ng-show="effect.force">{{ 'order_cancel_buy' | translate }}</span>
+				<span ng-hide="effect.force">{{ 'you_cancel_buy' | translate }}</span>				
 				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
 				{{ 'you_buy_for' | translate }}
 				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
 				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+				<span ng-show="effect.force">{{ 'order_cancel_due' | translate }}</span>
 			</span>
 			<span ng-switch-when="offer_cancel_sell">
-				{{ 'you_cancel_sell' | translate }}
+				<span ng-show="effect.force">{{ 'order_cancel_sell' | translate }}</span>
+				<span ng-hide="effect.force">{{ 'you_cancel_sell' | translate }}</span>
 				<strong>{{effect.quantity.value | fmtnum}} {{effect.quantity.currency | rpcurrency:native.code}}</strong> 
 				{{ 'you_sell_for' | translate }}
 				<strong>{{effect.total.value | fmtnum}} {{effect.total.currency | rpcurrency:native.code}}</strong> 
 				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
+				<span ng-show="effect.force">{{ 'order_cancel_due' | translate }}</span>
 			</span>
 
 			<span ng-switch-when="offer_create_buy">
@@ -80,31 +51,6 @@
 				({{ 'price' | translate }} <strong>{{effect.price | fmtnum}}</strong>)
 			</span>
 
-
-			<!-- ngSwitchWhen: trust_create_local -->
-			<span ng-switch-when="trust_create_local">
-				You now trust {{effect.counterparty}} for {{effect.limit | fmtnum}} {{effect.limit | rpcurrency:native.code}}
-			</span>
-			<!-- ngSwitchWhen: trust_create_remote -->
-			<span ng-switch-when="trust_create_remote">
-				{{effect.counterparty}} is trusting you for {{effect.limit | fmtnum}} {{effect.limit | rpcurrency:native.code}}
-			</span>
-			<!-- ngSwitchWhen: trust_change_local -->
-			<span ng-switch-when="trust_change_local">
-				You have changed {{effect.limit | rpcurrency:native.code}} trust for {{effect.counterparty}} from {{effect.prevLimit | fmtnum}} to {{effect.limit | fmtnum}}.
-			</span>
-			<!-- ngSwitchWhen: trust_change_remote -->
-			<span ng-switch-when="trust_change_remote">
-				{{effect.counterparty}} changed the {{effect.limit | rpcurrency:native.code}} trust from {{effect.prevLimit | fmtnum}} to {{effect.limit | fmtnum}}.
-			</span>
-			<!-- ngSwitchWhen: trust_change_balance -->
-			<span ng-switch-when="trust_change_balance">
-				Trust balance between you and {{effect.counterparty}} has been changed by {{effect.amount | fmtnum}} {{effect.amount | rpcurrency:native.code}}.
-			</span>
-			<!-- ngSwitchWhen: balance_change -->
-			<span ng-switch-when="balance_change">
-				{{'bal_change' | translate}} {{effect.amount | fmtnum}} {{effect.amount | rpcurrency:native.code}}
-			</span>
 			<!-- ngSwitchWhen: exception -->
 			<span ng-switch-default>{{effect.type}} 未解析</span>
 		</li>
