--- a/directive/tx-payment.html
+++ b/directive/tx-payment.html
@@ -21,7 +21,7 @@
 					{{ 'you_convert_to' | translate }}
 					<strong>{{tx.transaction.delivered.value | fmtnum}} {{tx.transaction.delivered.currency | rpcurrency:native.code}}</strong>
 				</span>
-				<span ng-show="tx.transaction.tag">{{'tx_tag' | translate}} <strong>{{tx.transaction.tag}}</strong>)</span>
+				<span ng-show="tx.transaction.tag && tx.transaction.type">{{'tx_tag' | translate}} <strong>{{tx.transaction.tag}}</strong>)</span>
 
 				<effects></effects>
 		</div>
