--- a/pages/history.html
+++ b/pages/history.html
@@ -18,9 +18,7 @@
 					<tx-trust ng-switch-when="trustline"></tx-trust>
 					<tx-offer ng-switch-when="order"></tx-offer>
 					<tx-offercancel ng-switch-when="orderCancellation"></tx-offercancel>
-					<tx-message ng-switch-when="accountset"></tx-message>
-					<tx-message ng-switch-when="rippling"></tx-message>
-					<tx-message ng-switch-when="failed"></tx-message>
+					<tx-message ng-switch-when="settings"></tx-message>
 					<tx-default ng-switch-default></tx-default>
 				</div>
 			</div>
