remove the home page and improve create process

--- a/pages/register.html
+++ b/pages/register.html
@@ -112,7 +112,7 @@
       </div>
       <p class="important" translate="save_safe">Have you saved your secret key somewhere safe?</p>
       <div class="row">
-        <div class="col-xs-12 col-sm-5 col-lg-4"><a class="btn btn-info btn-block btn-big" href="#balance" ng-click="goToFund()" translate="yes_save">Yes, I saved my secret key</a></div>
+        <div class="col-xs-12 col-sm-5 col-lg-4"><a class="btn btn-info btn-block btn-big" ng-click="goLogin()" translate="yes_save">Yes, I saved my secret key</a></div>
       </div>
     </div>
   </div>
