--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title translate="ripple_desktop_client">Foxlet Client for Ripple</title>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/app.css">
@@ -66,7 +67,7 @@
   
   <script>
       var appinfo = {
-         "version": "3.0.0"
+         "version": "3.1.0"
       };
   </script>
 </head>
