--- a/pages/send.html
+++ b/pages/send.html
@@ -153,7 +153,7 @@
 				
 				<group ng-show="mode == 'confirm'">
 				  <div class="mode-confirm row">
-						<p translate="you_sending" translate-values="path">You are sending XRP to</p>
+						<p><span translate="you_sending"></span>{{path.code | rpcurrency}}<span translate="you_sending_to"></span></p>
 						<div class="dest_feedback">
 							<div class="value">{{input_address}}</div>
 							<div class="extra" ng-show="real_address && real_address != input_address">{{real_address}}</div>
